Fix errors overflow in mobile

--- a/src/components/Aw-Presentation/styles/awpresentation.module.css
+++ b/src/components/Aw-Presentation/styles/awpresentation.module.css
@@ -4,9 +4,15 @@
     background-image: linear-gradient(163deg, var(--secondary) 20%, var(--primary) 100%);
     border-radius: 16px;
     transition: all .3s;
+    
+    
+
    }
-   .card:hover {
-    box-shadow: 0px 0px 30px 1px var(--tertiary);
-   }
+   @media screen and (max-width:768px){
+       .card:hover {
+       box-shadow: none
+    }
+       
+}
 
 
